fix profile image size on ios

--- a/app/frontend/packs/styles/custom/contact.scss
+++ b/app/frontend/packs/styles/custom/contact.scss
@@ -3,12 +3,21 @@
 @use '../base/mixins' as *;
 @use '../base/typography';
 
-.contact-form-container {
-  flex: 0 1 600px;
-}
 
 .contact-details-container {
-  padding: 20px 20px 0;
+  position: relative;
+  width: 100%;
+  @include respond-to(tablet) {
+    width: unset;
+  }
+
+  .about-contact-container {
+    margin: 0;
+  }
+}
+
+.contact-form-container {
+  flex: 0 1 600px;
 }
 
 .embedded-text-area.contact {
@@ -26,7 +35,19 @@
 
 .contact-details-container .about-contact-details-container {
   box-sizing: border-box;
-  padding: 0 5px;
+  padding-left: 10px;
+
+  @include respond-to(tablet) {
+    padding-left: 5px;
+  }
+
+  .name {
+    font-size: 1.6em;
+  }
+
+  .location {
+    font-size: 1.2em;
+  }
 }
 
 .contact-form-container .embedded-label {
@@ -37,4 +58,11 @@
   display: flex;
   flex-direction: row-reverse;
   margin-bottom: 0;
+}
+
+#contact-messages-new-form {
+  padding: 20px 0;
+  @include respond-to(tablet) {
+    padding-left: 20px;
+  }
 }
