--- a/app/frontend/packs/styles/themes/syntax_highlighting.scss
+++ b/app/frontend/packs/styles/themes/syntax_highlighting.scss
@@ -3,13 +3,13 @@ $background: rgb(41, 42, 43);
 
 .code-block {
   background-color: $background;
+  border-radius: 0.2em;
   color: $text;
   font-weight: 400;
   line-height: 1.25;
+  margin: 1em 0 1.5em;
   overflow-x: scroll;
   padding: 1em 1.1em;
-  margin: 1em 0em 1.5em 0em;
-  border-radius: 0.2em;
   word-wrap: initial;
 
   table td {
